2011-08-25  René Haber  <renehaber@users.sourceforge.net>

	* term/cairo.trm: New terminal epscairo using the shared cairo/pango
	code to produce and export an eps surface.

2011-08-24  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/command.c src/command.h src/win/winmain.c: "raise/lower <id>"
	command for windows terminal.

	* src/command.c (rlgets): Restore code for builtin readline which was
	deleted by accident.

2011-08-23  Peter Juhasz  <juhaszp@users.sourceforge.net>

	* src/datafile.c (f_stringcolumn) docs/gnuplot.doc:
	Implement 'stringcolumn("string")' in using specs to allow named columns
	for the "labels" style too. The more natural 
	    plot 'data' using "A":"B":"labels" with labels
	still doesn't work: document this fact. 
	

2011-08-23  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/command.c (rlgets): Removing duplicate entries trashes command
	line history when using editline. Just suppress adding the same command
	to history repeatedly.
	* src/history.c (history_find_all): editline's version of
	history_set_pos() does not work, so traverse history list manually.
	History indices are reversed compared to GNU readline. Fixes history ?.
	Patch #3186010

	* term/emf.trm (EMF_put_text): Use iconv (if available) to convert
	UTF-8 encoding to UTF-16 and store using wide characters.
	Bug #3021779

	* config/config.mgw config/mingw/Makefile: add support for libiconv

2011-08-22  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graph3d.c:  Honor 'set key maxrows N' in 3D plot key.
	Bug #3396501

2011-08-19  Ethan A Merritt  <merritt@u.washington.edu>

	* src/commands.c src/misc.c docs/gnuplot.doc:
	The old-style if/else syntax cannot be mixed with the new syntax using
	{ and } to enclose blocks of commands, possibly spanning several lines.
	Add stronger warnings to the documentation and issue an error message
	if an old-style if statement is encountered inside a bracketed clause.
	Bug #3393631

2011-08-15  Bastian Maerkisch  <bmaerkisch@web.de>
